--- a/index.html
+++ b/index.html
@@ -108,13 +108,22 @@
     <h2 class="title">Чем мы занимаемся</h2>
     <ul class="works list">
       <li class="our-works-card">
-        <img class="our-works-cards-images" src="./images/algoritm.jpg" alt="алгоритм" width="370" height="294">
+        <div class="our-works-overlay">
+          <p>десктоные приложения</p>
+        </div>
+        <img class="our-works-cards-images" src="./images/algoritm.jpg" alt="десктопные приложения" width="370" height="294">
       </li>
       <li class="our-works-card">
-        <img class="our-works-cards-images" src="./images/mobile-app.jpg" alt="мобильные апликации" width="370" height="294">
+        <div class="our-works-overlay">
+          <p>мобильные приложения</p>
+        </div>
+        <img class="our-works-cards-images" src="./images/mobile-app.jpg" alt="мобильные приложения" width="370" height="294">
       </li>
       <li class="our-works-card">
-        <img class="our-works-cards-images" src="./images/design.jpg" alt="разработка дизайна" width="370" height="294">
+        <div class="our-works-overlay">
+          <p>дизайнерские решения</p>
+        </div>
+        <img class="our-works-cards-images" src="./images/design.jpg" alt="дизайнерские решения" width="370" height="294">
       </li>
     </ul>
   </div>
