--- a/portfolio.html
+++ b/portfolio.html
@@ -70,7 +70,11 @@
             <ul class="project-list list">
                 <li class="project-list-item">
                     <a class="project-list-item-link link" href="#">
-                        <img src="./images/projects/technochrak.jpg" alt="Технохряк" width="370" height="294">
+                        <div class="project-list-img-wrapper">
+                            <img src="./images/projects/technochrak.jpg" alt="Технохряк" width="370" height="294">
+                            <p class="project-list-overlay">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить
+                            исчерпывающие сведения <br> о компании или частном лице.</p>
+                        </div>                        
                         <div class="project-list-content">
                             <h2 class="project-title">Технохряк</h2>
                             <p class="project-description">Веб-сайт</p>
@@ -79,8 +83,12 @@
                 </li>
                 <li class="project-list-item">
                     <a class="project-list-item-link link" href="#">
-                     <img src="./images/projects/poster-no-vs-gs.jpg" alt="Постер New Orlean vs Golden Star" width="370"
+                        <div class="project-list-img-wrapper">
+                            <img src="./images/projects/poster-no-vs-gs.jpg" alt="Постер New Orlean vs Golden Star" width="370"
                         height="294">
+                            <p class="project-list-overlay">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все
+                             это позволит посетителю получить исчерпывающие сведения <br> о компании или частном лице.</p>
+                        </div>                     
                     <div class="project-list-content">
                         <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
                         <p class="project-description">Дизайн</p>
@@ -89,7 +97,11 @@
                 </li>
                 <li class="project-list-item">
                     <a class="project-list-item-link link" href="#">
-                    <img src="./images/projects/restoran-seafood.jpg" alt="Ресторан SeaFood" width="370" height="294">
+                        <div class="project-list-img-wrapper">
+                            <img src="./images/projects/restoran-seafood.jpg" alt="Ресторан SeaFood" width="370" height="294">
+                            <p class="project-list-overlay">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+                                Все это позволит посетителю получить исчерпывающие сведения <br> о компании или частном лице.</p>
+                        </div>                    
                     <div class="project-list-content">
                          <h2 class="project-title">Ресторан SeaFood</h2>
                         <p class="project-description">Приложение</p>
@@ -98,7 +110,11 @@
                 </li>
                 <li class="project-list-item">
                     <a class="project-list-item-link link" href="#">
-                    <img src="./images/projects/project-prime.jpg" alt="Проект Prime" width="370" height="294">
+                        <div class="project-list-img-wrapper">
+                            <img src="./images/projects/project-prime.jpg" alt="Проект Prime" width="370" height="294">
+                            <p class="project-list-overlay">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+                                Все это позволит посетителю получить исчерпывающие сведения <br> о компании или частном лице.</p>
+                        </div>                    
                     <div class="project-list-content">
                         <h2 class="project-title">Проект Prime</h2>
                         <p class="project-description">Маркетинг</p>
@@ -107,7 +123,11 @@
                 </li>
                 <li class="project-list-item">
                     <a class="project-list-item-link link" href="#">
-                    <img src="./images/projects/project-boxes.jpg" alt="Проект Boxes" width="370" height="294">
+                        <div class="project-list-img-wrapper">
+                            <img src="./images/projects/project-boxes.jpg" alt="Проект Boxes" width="370" height="294">
+                            <p class="project-list-overlay">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+                                Все это позволит посетителю получить исчерпывающие сведения <br> о компании или частном лице.</p>
+                        </div>                    
                     <div class="project-list-content">
                         <h2 class="project-title">Проект Boxes</h2>
                         <p class="project-description">Приложение</p>
@@ -116,8 +136,11 @@
                 </li>
                 <li class="project-list-item">
                     <a class="project-list-item-link link" href="#">
-                    <img src="./images/projects/inspiration-has-no-borders.jpg" alt="Inspiration has no Borders" width="370"
-                        height="294">
+                        <div class="project-list-img-wrapper">
+                            <img src="./images/projects/inspiration-has-no-borders.jpg" alt="Inspiration has no Borders" width="370" height="294">
+                            <p class="project-list-overlay">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+                                Все это позволит посетителю получить исчерпывающие сведения <br> о компании или частном лице.</p>
+                        </div>                    
                     <div class="project-list-content">
                         <h2 class="project-title" lang="en">Inspiration has no Borders</h2>
                         <p class="project-description">Веб-сайт</p>
@@ -126,7 +149,11 @@
                 </li>
                 <li class="project-list-item">
                     <a class="project-list-item-link link" href="#">
-                    <img src="./images/projects/magazin-limited-edition.jpg" alt="Издание Limited Edition" width="370" height="294">
+                        <div class="project-list-img-wrapper">
+                            <img src="./images/projects/magazin-limited-edition.jpg" alt="Издание Limited Edition" width="370" height="294">
+                            <p class="project-list-overlay">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+                                Все это позволит посетителю получить исчерпывающие сведения <br> о компании или частном лице.</p>
+                        </div>                    
                     <div class="project-list-content">
                         <h2 class="project-title">Издание Limited Edition</h2>
                         <p class="project-description">Дизайн</p>
@@ -135,7 +162,11 @@
                 </li>
                 <li class="project-list-item">
                     <a class="project-list-item-link link" href="#">
-                    <img src="./images/projects/project-lab.jpg" alt="Проект LAB" width="370" height="294">
+                        <div class="project-list-img-wrapper">
+                            <img src="./images/projects/project-lab.jpg" alt="Проект LAB" width="370" height="294">
+                            <p class="project-list-overlay">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+                                Все это позволит посетителю получить исчерпывающие сведения <br> о компании или частном лице.</p>
+                        </div>                    
                     <div class="project-list-content">
                         <h2 class="project-title">Проект LAB</h2>
                          <p class="project-description">Маркетинг</p>
@@ -144,7 +175,11 @@
                 </li>
                 <li class="project-list-item">
                     <a class="project-list-item-link link" href="#">
-                    <img src="./images/projects/growing-business.jpg" alt="Growing Business" width="370" height="294">
+                        <div class="project-list-img-wrapper">
+                            <img src="./images/projects/growing-business.jpg" alt="Growing Business" width="370" height="294">
+                            <p class="project-list-overlay">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+                                Все это позволит посетителю получить исчерпывающие сведения <br> о компании или частном лице.</p>
+                        </div>                    
                     <div class="project-list-content">
                         <h2 class="project-title" lang="en">Growing Business</h2>
                          <p class="project-description">Приложение</p>
