--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <ul class="works list">
       <li class="our-works-card">
         <div class="our-works-overlay">
-          <p>десктоные приложения</p>
+          <p>десктопные приложения</p>
         </div>
         <img class="our-works-cards-images" src="./images/algoritm.jpg" alt="десктопные приложения" width="370" height="294">
       </li>
